# rules_ts

examples/: BUILD.bazel
examples/simple/: BUILD.bazel  foo.ts
examples/ts_lib/: BUILD.bazel  index.ts  tsconfig.json
ts/: repositories.bzl
